--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "json-web-token": "^3.2.0",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
