--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-web-token": "^3.2.0",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "run": "^1.4.0"
   }
